分布式Session设计

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>miaosha01</module>
         <module>miaosha02</module>
         <module>miaosha03</module>
+        <module>miaosha04</module>
     </modules>
     <groupId>com.lft</groupId>
     <artifactId>miaosha</artifactId>
