--- a/miaosha08/src/main/resources/application.properties
+++ b/miaosha08/src/main/resources/application.properties
@@ -26,7 +26,6 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
 
-
 #========================================== Thymeleaf =========================================#
 spring.thymeleaf.cache=false
 spring.thymeleaf.servlet.content-type=text/html
@@ -48,7 +47,6 @@ mybatis.configuration.default-fetch-size=100
 # \u8BBE\u7F6E\u8D85\u65F6\u65F6\u95F4\uFF0C\u5B83\u51B3\u5B9A\u6570\u636E\u5E93\u9A71\u52A8\u7B49\u5F85\u6570\u636E\u5E93\u54CD\u5E94\u7684\u79D2\u6570\u3002
 mybatis.configuration.default-statement-timeout=3000
 
-
 #========================================== Redis \u914D\u7F6E =========================================#
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
@@ -69,3 +67,29 @@ spring.redis.jedis.pool.min-idle=100
 # \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09(\u6BEB\u79D2)
 spring.redis.jedis.pool.max-wait=10000
 
+#========================================== \u9875\u9762\u8D44\u6E90\u9759\u6001\u5316\u914D\u7F6E =========================================#
+#\u6DFB\u52A0\u6620\u5C04
+spring.resources.add-mappings=true
+# \u8D44\u6E90\u7F13\u5B58\u65F6\u95F4\uFF0C\u5355\u4F4D\u79D2
+spring.resources.cache.period=3600
+# \u542F\u7528\u94FE\u5F0F\u7F13\u5B58
+spring.resources.chain.cache=true
+# \u5141\u8BB8\u94FE\u5F0F
+#spring.resources.chain.enabled=true
+# \u5F00\u542Fgzip\u538B\u7F29 #\u5DF2\u7ECF\u8FC7\u671F
+#spring.resources.chain.gzipped=true
+#\u5F00\u542F\u538B\u7F29
+spring.resources.chain.compressed=true
+
+# \u4F7F\u7528\u94FE\u5F0F\u7B56\u7565\u2014\u2014html\u5E94\u7528\u7F13\u5B58
+spring.resources.chain.html-application-cache=true
+# \u6307\u5B9A\u9759\u6001\u8D44\u6E90\u52A0\u8F7D\u8DEF\u5F84
+spring.resources.static-locations=classpath:/static/
+
+# \u94FE\u5F0F\u7B56\u7565\u2014\u2014\u5185\u5BB9
+#spring.resources.chain.strategy.content.enable=false
+#spring.resources.chain.strategy.content.paths=/**
+# \u94FE\u5F0F\u7B56\u7565\u2014\u2014\u6DF7\u5408
+#spring.resources.chain.strategy.fixed.enabled=false
+#spring.resources.chain.strategy.fixed.paths=/**
+#spring.resources.chain.strategy.fixed.version=1
