--- a/miaosha01/pom.xml
+++ b/miaosha01/pom.xml
@@ -64,12 +64,14 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.46</version>
         </dependency>
-        <!-- 日志依赖 -->
-        <dependency>
+        <!--
+        日志依赖 可以引入
+        spring-boot-starter-web 中引入了日志依赖
+        -->
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
-
+            <artifactId>slf4j-api</artifactId>
+        </dependency>-->
         <!-- MD5 依赖 -->
         <dependency>
             <groupId>commons-codec</groupId>
