--- a/miaosha05-war/pom.xml
+++ b/miaosha05-war/pom.xml
@@ -70,11 +70,14 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.46</version>
         </dependency>
-        <!-- 日志依赖 -->
-        <dependency>
+        <!--
+        日志依赖 可以引入
+        spring-boot-starter-web 中引入了日志依赖
+        -->
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>-->
         <!-- 参数校验 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
