--- a/miaosha08/pom.xml
+++ b/miaosha08/pom.xml
@@ -69,11 +69,14 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.46</version>
         </dependency>
-        <!-- 日志依赖 -->
-        <dependency>
+        <!--
+        日志依赖 可以引入
+        spring-boot-starter-web 中引入了日志依赖
+        -->
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>-->
         <!-- 参数校验 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,6 +94,7 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+        <!-- Http 客户端 -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
