--- a/miaosha02/pom.xml
+++ b/miaosha02/pom.xml
@@ -79,14 +79,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.46</version>
         </dependency>
-        <!--
-        日志依赖 可以引入
-        spring-boot-starter-web 中引入了日志依赖
-        -->
-        <!--<dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>-->
+        <!-- 日志依赖 -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         <!-- Spring Boot 测试依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
